# shop-server-play-project

./: .dockerignore  .gitmodules  LICENSE  Makefile  README.md  go.work
docker/: client.Dockerfile  manager.Dockerfile  server.Dockerfile
examples/: work_example.sh
shop-client/: go.mod  shop-client.go
shop-manager/: go.mod  shop-manager.go
shop-server/: CMakeLists.txt
shop-server/include/: product-category.h  shop-server-utility.h  shop-server.h
shop-server/src/: CMakeLists.txt  main.cpp  product-category.cpp  shop-server-utility.cpp  shop-server.cpp
